package datasource;

public record EdgeData(String startNode, String endNode, double distance) {
}
