package domain;

public record Edge(Node start, Node destination, double weight) {

}