package domain;

public record Node(String label) {

}
