@startuml roseMap
package presentation {
    class Main{
        +{static} main(args: String...): void
    }
    class MapManager {
        -roseMap: Graph
        -loader: Loader
        +MapManager(loader: LoaderBtFile)
        -loadMap(): Graph
        +shortestPath(beginningNodeId: String, destinationNodeId: String): String
        +getPathLength(List<Edge>): Double
        +getGraph(): Graph
    }
}

package domain {
    class Graph {
        -map: Map<Node, Set<Edge>>
        +Graph()
        +addNode(node: String): void
        +addEdge(one: String, two: String, weight: Double): void
        -getNode(label: String): Node
        +findShortestPath(beginningNodeId: String, destinationNodeId: String): List<Edge>
        +dijkstra(start: Node, destination: Node): List<Edge>
        +toString(): String
    }

    class Node {
        -label: String
        +Node(label: String)
        +getLabel(): String
    }

    class Edge {
        -start: Node
        -destination: Node
        -weight: Double
        +Edge(start: Node, destination: Node, weight: Double)
        +getDestination(): Node
        +getWeight(): Double
        +getStart(): String
    }

    Graph ..> Edge
    Graph ..> Node
    Edge ..> Node
}

package datasource {
    interface Loader {
        +{abstract}getEdges(): List<EdgeData>
        +{abstract}getNodes(): List<String>
    }

    class LoaderByFile {
        -nodeFile: String
        -edgeFile: String
        +LoaderByFile(nodeFile: String, edgeFile: String)
        +{abstract}getEdges(): List<EdgeData>
        +{abstract}getNodes(): List<String>
        - readFile(file: String): Scanner throws FileNotFoundException
    }

    class EdgeData {
        -startNode: String
        -endNode: String
        -distance: Double
        +EdgeData(startNode: String, endNode: String, distance: Double)
        +getStartNode(): String
        +getEndNode(): String
        +getDistance(): Double
    }

    LoaderByFile ..|> Loader
    Loader ..> EdgeData
}

Main --> LoaderByFile
Main --> MapManager

MapManager --> Graph
MapManager --> Loader
MapManager ..> LoaderByFile
MapManager ..> EdgeData
MapManager ..> Edge


@enduml